--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+<!-- 文章主页右侧 -->
 <!-- Page Header -->
 <header class="intro-header" style="background-image: url('{{ site.BASE_PATH }}{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
     <div class="container">
