修改文章底部文字颜色和莫名其妙的高度,添加注释,添加每日一言点击重新加载

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+<!-- 页面头部菜单栏 -->
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
@@ -18,7 +19,7 @@
                     <li><a href="{{ site.BASE_PATH }}/">主页</a></li>
                     <li><a href="/search/">搜索</a></li>
 					<li><a href="{{ site.BASE_PATH}}/{{ site.archive_path }}/">归档</a></li>
-					<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}/">目录</a></li>
+					<li><a href="{{ site.BASE_PATH}}/{{ site.categories_path }}/">分类</a></li>
 					<li><a href="{{ site.BASE_PATH}}/{{ site.tags_path }}/">标签</a></li>
 					<li><a href="{{ site.BASE_PATH}}/{{ site.about_path }}">关于我</a></li>
                 </ul>
