--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,8 +86,9 @@ End Cloudflare Web Analytics -->
           <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <style>
               p.copyright.text-muted {
-                color: #bfbfbf;
+                color: #777;
                 font-size: 20px;
+                margin-top: auto;
               }
             </style>
             <p class="copyright text-muted">
@@ -148,7 +149,7 @@ End Cloudflare Web Analytics -->
               今天：<span id="show_time"></span> <br />
               <a
                 href="https://beian.miit.gov.cn/"
-                style="color: #bfbfbf"
+                style="color: #777"
                 target="_blank"
               >
                 备案号：{{ site.bah }}
