--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -48,16 +48,17 @@ layout: default
                             <img src="{{site.sidebar-avatar}}" />
                         {% endif %}
                         {% if site.everyday-yan %}
-                            <p id="hitokoto">每日一言获取中...
+                            <p id="hitokoto" onload="every_yan()" onclick="every_yan()">每日一言获取中...
                             </p>
                             <script>
-                                fetch('https://v1.hitokoto.cn')
-                                  .then(response => response.json())
-                                  .then(data => {
-                                    const hitokoto = document.getElementById('hitokoto')
-                                    hitokoto.innerText = data.hitokoto
-                                  })
-                                  .catch(console.error)
+                                function every_yan() {
+                                    fetch('https://v1.hitokoto.cn')
+                                    .then(response => response.json())
+                                    .then(data => {
+                                        const hitokoto = document.getElementById('hitokoto')
+                                        hitokoto.innerText = data.hitokoto
+                                    })
+                                    .catch(console.error)}
                               </script>
                         {% else %}
                             {% if site.sidebar-about-description %}
