--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -285,5 +285,18 @@ End Cloudflare Web Analytics -->
     s.parentNode.insertBefore(bp, s);
 })();
 </script>-->
+
+<!-- 百度统计 -->
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?885bf059f5cebd5986a83f980b8cc6a0";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
+  
+
   </body>
 </html>
