--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -48,9 +48,10 @@ layout: default
                             <img src="{{site.sidebar-avatar}}" />
                         {% endif %}
                         {% if site.everyday-yan %}
-                            <p id="hitokoto" onload="every_yan()" onclick="every_yan()">每日一言获取中...
+                            <p id="hitokoto" onclick="every_yan()">每日一言获取中...
                             </p>
-                            <script>
+                            <script type="text/javascript">
+                                window.onload = every_yan;
                                 function every_yan() {
                                     fetch('https://v1.hitokoto.cn')
                                     .then(response => response.json())
