添加cloudflare统计和粒子特效

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,9 +67,6 @@
 
   gtag('config', 'G-GER6JGHQSF');
 </script> -->
-    <!-- Cloudflare Web Analytics 
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4731b4f01bbf4c67898d64a4c48c3cea"}'></script>
-End Cloudflare Web Analytics -->
     <!-- music↓-->
     <!-- <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css"> -->
   </head>
@@ -285,6 +282,10 @@ End Cloudflare Web Analytics -->
     s.parentNode.insertBefore(bp, s);
 })();
 </script>-->
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4731b4f01bbf4c67898d64a4c48c3cea"}'></script>
+<!-- End Cloudflare Web Analytics -->
 
 <!-- 百度统计 -->
 <script>
